--- a/configs/instance_seg.yaml
+++ b/configs/instance_seg.yaml
@@ -1,33 +1,31 @@
-experiment_name: variance_oneshot
-run_name: equalize_weights_full_dataset_large
+experiment_name: workshop
+run_name: instance_seg
 task_name: train
 tags:
 - dev
 train: true
 test: false
-ckpt_path: "//allen/aics/assay-dev/users/Benji/CurrentProjects/im2im_dev/cyto-dl/logs/train/runs/workshop/instance_seg/2024-07-17_14-34-16/checkpoints/last.ckpt"
+ckpt_path: "//allen/aics/assay-dev/users/Benji/CurrentProjects/im2im_dev/cyto-dl/logs/train/runs/workshop/instance_seg/2024-07-17_14-34-16/checkpoints/epoch_089.ckpt"
 seed: 12345
 data:
-  _target_: cyto_dl.datamodules.folder.make_folder_dataloader
-  path: 
-  transforms:
-    - _target_: monai.transforms.LoadImaged
-      keys: input
-      reader:
-        - _target_: cyto_dl.image.io.MonaiBioReader
-          dimension_order_out: "CZYX"
-          dask_load: False
-          C: 1
-    - _target_: monai.transforms.NormalizeIntensityd
-      keys: input
-      channel_wise: true
-    - _target_: monai.transforms.ToTensord
-      keys: input
-      dtype: float16
+  _target_: torch.data.DataLoader
   num_workers: 1
   batch_size: 1
-  pin_memory: True
-  persistent_workers: False
+  shuffle: False
+  dataset:
+    _target_: monai.data.Dataset
+    data:
+    transform:
+      - _target_: cyto_dl.image.transforms.clip.Clip
+      - _target_: monai.transforms.NormalizeIntensity
+        channel_wise: true
+      - _target_: monai.transforms.ToTensor
+        dtype: float16
+  _aux:
+    patch_shape:
+    - 40
+    - 256
+    - 256
 model:
   _target_: cyto_dl.models.im2im.MultiTaskIm2Im
   compile: false
@@ -97,7 +95,7 @@ model:
       _target_: torch.optim.lr_scheduler.ExponentialLR
       gamma: 0.99
   inference_args:
-    roi_size: [32, 256, 256]
+    roi_size: ${data._aux.patch_shape}
     sw_batch_size: 1
     overlap: 0.25
     mode: gaussian
@@ -111,23 +109,26 @@ trainer:
   default_root_dir: ${paths.output_dir}
   min_epochs: 1
   max_epochs: 100
-  accelerator: cpu
-  check_val_every_n_epoch: 1
+  accelerator: gpu
+  devices:
+  - 0
+  precision: 16
+  check_val_every_n_epoch: 10
   deterministic: false
   detect_anomaly: false
-  precision: 16
+  max_time: null
 paths:
-  root_dir: .
+  root_dir: ${oc.env:PROJECT_ROOT, './'}
   data_dir: ${paths.root_dir}/data/
   log_dir: ${paths.root_dir}/logs/
-  output_dir:
+  output_dir: 
 extras:
   ignore_warnings: true
-  enforce_tags: true
-  print_config: true
+  enforce_tags: False
+  print_config: False
   precision:
     _target_: torch.set_float32_matmul_precision
     precision: medium
-source_col: input
+source_col: raw
 target_col: caaxseg
 persist_cache: true
