update checkpoitn structure

--- a/configs/instance_seg_predict.yaml
+++ b/configs/instance_seg_predict.yaml
@@ -5,7 +5,8 @@ tags:
 - dev
 train: true
 test: false
-ckpt_path: "//allen/aics/assay-dev/users/Benji/CurrentProjects/im2im_dev/cyto-dl/logs/train/runs/workshop/instance_seg/2024-07-17_14-34-16/checkpoints/epoch_089.ckpt"
+checkpoint:
+  ckpt_path: "//allen/aics/assay-dev/users/Benji/CurrentProjects/im2im_dev/cyto-dl/logs/train/runs/workshop/instance_seg/2024-07-17_14-34-16/checkpoints/epoch_089.ckpt"
 seed: 12345
 data:
   _aux:
