--- a/configs/contrastive_predict.yaml
+++ b/configs/contrastive_predict.yaml
@@ -6,7 +6,7 @@ tags:
 train: true
 test: false
 checkpoint:
-  ckpt_path: ${paths.root_dir}/assets/models/
+  ckpt_path: ${paths.root_dir}/assets/models/contrastive_predict.ckpt
   strict: true
   weights_only: True
 seed: 12345
