--- a/configs/instance_seg_predict.yaml
+++ b/configs/instance_seg_predict.yaml
@@ -6,7 +6,7 @@ tags:
 train: true
 test: false
 checkpoint:
-  ckpt_path: "//allen/aics/assay-dev/users/Benji/CurrentProjects/im2im_dev/cyto-dl/logs/train/runs/workshop/instance_seg/2024-07-17_14-34-16/checkpoints/epoch_089.ckpt"
+  ckpt_path: ${paths.root_dir}/assets/models/contrastive_predict.ckpt/instance_seg_predict.ckpt
   strict: true
   weights_only: True
 seed: 12345
